added base_file to meta

--- a/P003258.opf/meta.yml
+++ b/P003258.opf/meta.yml
@@ -10,43 +10,52 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 935
+      base_file: v001.txt
     dadfa15ca58c45ddb31c587ff2ea58ae:
       image_group_id: I1KG10196
       title: ''
       volume_number: 2
       total_pages: 1007
+      base_file: v002.txt
     422eed15e3bb437fa7142df90fa53f00:
       image_group_id: I1KG10197
       title: ''
       volume_number: 3
       total_pages: 883
+      base_file: v003.txt
     d5a38df1585f4bb3b4792eba8baa93eb:
       image_group_id: I1KG10198
       title: ''
       volume_number: 4
       total_pages: 923
+      base_file: v004.txt
     9b0c5319db52424fb8041c3f90a77268:
       image_group_id: I1KG10199
       title: ''
       volume_number: 5
       total_pages: 898
+      base_file: v005.txt
     d1c2b2738e9142ffbf5d0d20f3a2d028:
       image_group_id: I1KG10200
       title: ''
       volume_number: 6
       total_pages: 521
+      base_file: v006.txt
     6c2fabee37564743a406d16c9157d02e:
       image_group_id: I1KG10201
       title: ''
       volume_number: 7
       total_pages: 1296
+      base_file: v007.txt
     4024a349b26648739d1dcf0c14e712be:
       image_group_id: I1KG10202
       title: ''
       volume_number: 8
       total_pages: 1424
+      base_file: v008.txt
     8fd1ed724a9e4422b3c6db89c92c2897:
       image_group_id: I1KG10203
       title: ''
       volume_number: 9
       total_pages: 867
+      base_file: v009.txt
