--- a/P003258.opf/layers/v001/Pagination.yml
+++ b/P003258.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8ebfeacc445a465398a0766a34064726
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3c1f3f7d12be489dadea725b4e0cf43a:
