--- a/P003258.opf/layers/v002/Pagination.yml
+++ b/P003258.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 443a4a2c0f254d7da7c85dfe139f21ff
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   9b95f06617d94f07a283989b154ecbfc:
