--- a/P003258.opf/layers/v003/Pagination.yml
+++ b/P003258.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8093508609844aa89722fea32add3642
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   fea87df2262641949f1122d8b64deb71:
