--- a/P003258.opf/layers/v004/Pagination.yml
+++ b/P003258.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: ae6cd24783f847e9966b9724fd434d37
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3fe9b886757c49ebbdc1bcc74d2efa6c:
