--- a/P003258.opf/layers/v005/Pagination.yml
+++ b/P003258.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: 401711d5639446218f003af2c1c1f2f4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1bc4544a724c44339c8821c785d21c4c:
