--- a/P003258.opf/layers/v006/Pagination.yml
+++ b/P003258.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: 515a97583cdc4ea9b91594d64c3b6e64
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   b62286d331924f27a124b2fa38ba1592:
