--- a/P003258.opf/layers/v007/Pagination.yml
+++ b/P003258.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: 45da612c34e54e1c9c91c1deac7ab45b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c91456f824f5486497cf73efda6675f2:
