--- a/P003258.opf/layers/v008/Pagination.yml
+++ b/P003258.opf/layers/v008/Pagination.yml
@@ -1,5 +1,5 @@
 id: d8938cdf06d8409a87634335864dfa57
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   77ec768c4c874e7588f88e7ed122a7c6:
