--- a/P003258.opf/layers/v009/Pagination.yml
+++ b/P003258.opf/layers/v009/Pagination.yml
@@ -1,5 +1,5 @@
 id: 200128a1d4c045d7a20041aa7b12da68
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   eb5452e1b9ab4b8a830ebaaed84f64f5:
